# gomokurs

./: .gitignore  Cargo.toml  README.md  black.player.yaml  player.yaml  white.player.yaml
crates/cli/: Cargo.toml
crates/gomokurs/: Cargo.toml
crates/gomokurs/src/adapters/player_interfaces/: local.rs
crates/gomokurs/src/adapters/player_interfaces/local/: local.rs  parsers.rs
crates/gomokurs/src/domain/: board_state_manager.rs
crates/gomokurs/src/domain/board_state_manager/: models.rs
crates/gomokurs/src/domain/player_interfaces_manager/: models.rs
crates/gomokurs/src/lib/: domain.rs  lib.rs
crates/gomokurs/src/lib/adapters/: player_interfaces.rs
crates/gomokurs/src/lib/domain/: player_interfaces_manager.rs
crates/gomokurs/src/lib/domain/board_state_manager/: models.rs  service.rs
crates/gomokurs/src/lib/domain/game_manager/models/: player.rs  timer.rs
crates/gomokurs/src/lib/domain/game_manager/ports/: player_notifier.rs
crates/gomokurs/src/lib/domain/player_interfaces_manager/: service.rs
crates/gomokurs/src/lib/domain/player_interfaces_manager/ports/: service.rs
crates/gomokurs_cli/: Cargo.toml  player.yaml
crates/gomokurs_cli/src/: configuration.rs  lib.rs  player_interface.rs
crates/gomokurs_cli/src/configuration/: cli.rs  player_configuration.rs
crates/gomokurs_coordinator/: Cargo.toml
crates/gomokurs_coordinator/src/: domain.rs
crates/gomokurs_coordinator/src/adapters/player_interfaces/: local.rs  tcp.rs
crates/gomokurs_coordinator/src/adapters/player_interfaces/local/: interface.rs  notifier.rs  parsers.rs
crates/gomokurs_coordinator/src/adapters/player_interfaces/tcp/: handlers.rs  interface.rs  notifier.rs  protocol.rs  tcp.rs
crates/gomokurs_coordinator/src/domain/: coordinator.rs
crates/gomokurs_coordinator/src/domain/coordinator/: models.rs  ports.rs  service.rs
crates/gomokurs_coordinator/src/domain/coordinator/models/: actions.rs  error.rs  options.rs
crates/gomokurs_coordinator/src/domain/coordinator/ports/: player_interface.rs  service.rs
crates/gomokurs_coordinator/src/domain/coordinator/service/: handlers.rs  player.rs  service.rs
crates/gomokurs_coordinator/src/domain/player_interfaces_manager/: ports.rs  service.rs
crates/gomokurs_coordinator/src/domain/player_interfaces_manager/ports/: player_listener.rs  service.rs
crates/gomokurs_game_engine/: Cargo.toml
crates/gomokurs_game_engine/src/: domain.rs
crates/gomokurs_game_engine/src/adapters/: player_interfaces.rs
crates/gomokurs_game_engine/src/adapters/player_interfaces/: local.rs  tcp.rs
crates/gomokurs_game_engine/src/adapters/player_interfaces/local/: local.rs
crates/gomokurs_game_engine/src/adapters/player_interfaces/tcp/: listener.rs  notifier.rs  tcp.rs
crates/gomokurs_game_engine/src/domain/: game_engine.rs  game_manager.rs
crates/gomokurs_game_engine/src/domain/board_state_manager/: ports.rs
crates/gomokurs_game_engine/src/domain/game_engine/: models.rs  ports.rs  service.rs
crates/gomokurs_game_engine/src/domain/game_engine/models/: error.rs  state.rs
crates/gomokurs_game_engine/src/domain/game_engine/ports/: service.rs
crates/gomokurs_game_engine/src/domain/game_manager/: ports.rs  service.rs
crates/gomokurs_game_engine/src/domain/game_manager/models/: player.rs
crates/gomokurs_game_engine/src/domain/game_manager/ports/: player_notifier.rs
crates/gomokurs_game_engine/src/domain/player_interfaces_manager/ports/: player_listener.rs
crates/gomokurs_players_interface_coordinator/: Cargo.toml
crates/gomokurs_players_interface_coordinator/src/: adapters.rs
crates/gomokurs_players_interface_coordinator/src/domain/player_interfaces_manager/: models.rs
crates/gomokurs_server/: Cargo.toml
crates/gomokurs_server/src/adapters/: http.rs
crates/gomokurs_server/src/adapters/http/handlers/: create_game.rs
crates/gomokurs_server/src/domain/game_manager/: ports.rs  service.rs
crates/server/: Cargo.toml
docs/protocols/: TCP.MD
examples/gomokurs_cli_config/: active.tcp.player.yaml  passive.tcp.player.yaml  stdio.player.yaml
src/: board.rs  game.rs  main.rs
src/lib/: adapters.rs  domain.rs  lib.rs  outbound.rs
src/lib/adapters/: clients.rs  local.rs
src/lib/adapters/clients/: local.rs
src/lib/adapters/clients/local/: client.rs  listener.rs  local.rs  notifier.rs  parsers.rs
src/lib/adapters/local/: listener.rs  local.rs  notifier.rs  parsers.rs
src/lib/adapters/player_interfaces/local/: listener.rs  local.rs  notifier.rs
src/lib/domain/: board_state_manager.rs  game.rs  game_manager.rs  gomoku.rs  player_interfaces_manager.rs  players_interface.rs
src/lib/domain/board_state_manager/: models.rs  ports.rs  service.rs
src/lib/domain/game/: models.rs  ports.rs  service.rs
src/lib/domain/game/models/: actions.rs  board.rs  errors.rs  game.rs  requests.rs
src/lib/domain/game/ports/: game_state_repository.rs  player_client.rs  player_listener.rs  player_notifier.rs  service.rs
src/lib/domain/game_manager/: models.rs  ports.rs  service.rs
src/lib/domain/game_manager/models/: board.rs  commands.rs  errors.rs  game.rs  player.rs  requests.rs  timer.rs
src/lib/domain/game_manager/ports/: player_client.rs  player_listener.rs  player_notifier.rs  service.rs
src/lib/domain/gomoku/: models.rs  ports.rs  service.rs
src/lib/domain/gomoku/ports/: service.rs
src/lib/domain/player_interfaces_manager/: models.rs  ports.rs  service.rs
src/lib/domain/player_interfaces_manager/ports/: service.rs  (+1 more)
src/lib/domain/players_interface/: models.rs  ports.rs  service.rs
src/lib/inbound/: named_pipe.rs
src/lib/outbound/: in_memory.rs  local_program.rs  named_pipe.rs  stdout.rs
src/lib/outbound/local_program/: client.rs  parsers.rs
(+8 files in other folders)
