[package]
name = "gomokurs"
version = "0.1.0"
edition = "2021"

[lib]
name = "gomokurs"
path = "src/lib/lib.rs"

[[bin]]
name = "gomokurs"
path = "src/bin/gomokurs/main.rs"


[dependencies]
anyhow = "1.0.93"
lazy_static = "1.5.0"
nix = { version = "0.29.0", features = ["fs"] }
regex = "1.11.1"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["fs", "io-std", "io-util", "macros", "process", "rt", "rt-multi-thread", "signal", "sync", "time"] }
tokio-test = "0.4.4"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.19"
uuid = { version = "1.11.0", features = ["v4"] }
