[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Coding Kelps"]

[workspace.dependencies]
gomokurs-game-engine = { path = "./crates/gomokurs_game_engine" }
gomokurs-players-interface-coordinator = { path = "./crates/gomokurs_players_interface_coordinator" }
gomokurs-cli = { path = "./crates/gomokurs_cli" }

anyhow = "1.0.93"
lazy_static = "1.5.0"
regex = "1.11.1"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["fs", "io-std", "io-util", "macros", "process", "rt", "rt-multi-thread", "signal", "sync", "time", "net"] }
tokio-test = "0.4.4"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.19"
clap = { version = "4.5.23", features = ["derive"] }
axum = { version = "0.7.9", features = ["macros"] }
serde = { version = "1.0.216", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["trace"] }
serde_yaml = "0.9.34"
config = "0.15.6"
