[package]
name = "gomokurs"
version = "0.1.0"
edition = "2021"

[lib]
name = "gomokurs"
path = "src/lib.rs"

[features]
default = ["local"]
local = []

[dependencies]
anyhow.workspace = true
lazy_static.workspace = true
regex.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-test.workspace = true
tracing.workspace = true
