[package]
name = "gomokurs-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "gomokurs-cli"
path = "src/bin/main.rs"

[dependencies]
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
regex.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_yaml.workspace = true
config.workspace = true

# Local crates

gomokurs-game-engine.workspace = true
