[package]
name = "gomokurs-coordinator"
version = "0.1.0"
edition = "2021"

[lib]
name = "gomokurs_coordinator"
path = "src/lib.rs"

[features]
default = ["local", "tcp"]
local = []
tcp = []

[dependencies]
anyhow.workspace = true
lazy_static.workspace = true
regex.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-test.workspace = true
tracing.workspace = true

gomokurs-game-engine.workspace = true
